# glean_mcp

./: README.md  pyproject.toml
src/glean_mcp/: __init__.py  glean_dictionary_client.py  probeinfo_client.py  server.py  sql_templates.py
