[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glean-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.2.0",
  "httpx>=0.27",
  "pydantic>=2.8",
  "rapidfuzz>=3.9",
  "diskcache>=5.6"
]

[project.scripts]
glean-mcp = "glean_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
